--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
@@ -19,6 +19,9 @@ master.page.profile.action.1 		= Action 1
 master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
 
+master.page.register.hacker 		= Sign in as a new hacker
+master.page.register.company 		= Sign in as a new company
+
 master.page.terms                   = Terms and conditions
 
 master.page.login 					= Login
