--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
@@ -19,6 +19,9 @@ master.page.profile.action.1 		= Acción 1
 master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
 
+master.page.register.hacker 		= Registrarse como un hacker nuevo
+master.page.register.company 		= Registrarse como una compañía nueva
+
 master.page.terms                   = Terminos y condiciones
 
 master.page.login 					= Entrar
