Listas de company y position

--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
@@ -26,3 +26,8 @@ master.page.terms                   = Terms and conditions
 
 master.page.login 					= Login
 master.page.logout 					= Logout
+
+master.page.companies 				= Companies
+master.page.customer.list.companies = Company list
+master.page.positions 				= Positions
+master.page.customer.list.positions = Position list
