--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
@@ -26,3 +26,8 @@ master.page.terms                   = Terminos y condiciones
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
+
+master.page.companies 				= Compañías
+master.page.customer.list.companies = Lista de compañías
+master.page.positions 				= Posiciones
+master.page.customer.list.positions = Lista de posiciones
