CU-2.2 + arreglo surname como String
Ahora cualquier actor que esté autenticado, puede editar sus datos personales.

--- a/Acme-Hacker-Rank/src/main/webapp/views/company/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/company/messages_es.properties
@@ -20,7 +20,6 @@ company.phonePlaceholder = +CC(AC)PN or +CC PN or just PN
 company.address = Dirección
 company.vatNumber	= Número VAT
 
-
 company.username = Nombre de usuario
 company.password = Contraseña
 company.passwordChecker	= Repita la contraseña
@@ -39,10 +38,7 @@ company.cancel							= Cancelar
 company.save								= Guardar
 company.edit							= Editar perfil
 
-
-
-
 company.commit.error 		= No se puede realizar la operación
-company.commit.ok			= Operacion realizada con éxito
+company.commit.ok			= Operación realizada con éxito
 	
 actor.delete 								= Eliminar su propia cuenta
