--- a/Acme-Hacker-Rank/src/main/webapp/views/hacker/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/hacker/messages_es.properties
@@ -15,7 +15,6 @@ hacker.phonePlaceholder = +CC(AC)PN or +CC PN or just PN
 hacker.address = Dirección
 hacker.vatNumber	= Número VAT
 
-
 hacker.username = Nombre de usuario
 hacker.password = Contraseña
 hacker.passwordChecker	= Repita la contraseña
@@ -34,10 +33,7 @@ hacker.cancel							= Cancelar
 hacker.save								= Guardar
 hacker.edit							= Editar perfil
 
-
-
-
 hacker.commit.error 		= No se puede realizar la operación
-hacker.commit.ok			= Operacion realizada con éxito
+hacker.commit.ok			= Operación realizada con éxito
 	
 actor.delete 								= Eliminar su propia cuenta
