--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
@@ -9,18 +9,23 @@
 master.page.administrator			= Administrador
 master.page.administrator.action.1	= Acción 1
 master.page.administrator.action.2	= Acción 2
+master.page.administrator.viewProfile = Mi perfil
 
-master.page.customer				= Cliente
-master.page.customer.action.1		= Acción 1
-master.page.customer.action.2		= Acción 2
+master.page.company				= Compañía
+master.page.company.action.1		= Acción 1
+master.page.company.display			= Mi perfil
+
+master.page.hacker				= Hacker
+master.page.hacker.action.1		= Acción 1
+master.page.hacker.display			= Mi perfil
 
 master.page.profile 				= Perfil
 master.page.profile.action.1 		= Acción 1
 master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
 
-master.page.register.hacker 		= Registrarse como un hacker nuevo
-master.page.register.company 		= Registrarse como una compañía nueva
+master.page.register.hacker 		= Registrarse como un hacker
+master.page.register.company 		= Registrarse como una compañía
 
 master.page.terms                   = Terminos y condiciones
 
