--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
@@ -14,6 +14,8 @@ position.ticker	= Código
 position.status	= Estado
 position.company = Compañía
 
+position.create = Crear posición
+
 position.cancel							= Cancelar
 position.save							= Guardar
 position.edit							= Editar posición
