--- a/Acme-Hacker-Rank/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/administrator/messages.properties
@@ -6,5 +6,44 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= This is the administrator's action 1
-administrator.action.2	= This is the administrator's action 2
+administrator.profile.title = My profile
+
+administrator.name = Name
+administrator.surname = Surname
+administrator.email = Email
+administrator.phone = Phone
+administrator.address = Address
+administrator.photo = Photo
+administrator.vatNumber = VAT number
+administrator.username = Username
+administrator.password = Password
+administrator.passwordChecker = Repeat password
+
+administrator.edit = Edit profile
+administrator.save = Save
+administrator.cancel = Cancel
+
+userAccount.password = Password
+
+administrator.fieldset.personalInformation = Personal information
+administrator.fieldset.userAccount = User account
+administrator.validation.legalTermsAcceptance = You need to read and accept our legal terms
+administrator.validation.passwordsNotMatch = Passwords do not match
+administrator.validation.userNameAlreadyExists = Username already in use, try a different one
+
+administrator.display = Display
+
+administrator.confirmTerms		= If you check the checkbox you will accept the terms and conditions.
+administrator.terms				= Terms and conditions
+
+administrator.commit.error 		= Cannot commit this operation
+actor.terms	= I accept the <a href="terms/display.do" target="_blank">Terms and conditions</a> 
+
+admin.confirmationPhone = The phone number entered doesn't follow the following patterns: +CC(AC)PN, +CC PN  Are you sure is it correct?
+member.validation.passwordsNotMatch	= Passwords does not match
+member.validation.usernameExists		= This username already exists
+member.validation.checkBox				= This checkbox must be checked
+
+administrator.report = REPORT
+
+actor.exportData = Export data
