--- a/Acme-Hacker-Rank/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/administrator/messages_es.properties
@@ -6,5 +6,43 @@
 # TDG Licence, a copy of which you may download from 
 # http://www.tdg-seville.info/License.html
 
-administrator.action.1	= Esta es la acción 1 del administrador
-administrator.action.2	= Esta es la acción 2 del administrador
+administrator.profile.title = Mi perfil
+
+administrator.name = Nombre
+administrator.surname = Apellido
+administrator.email = Email
+administrator.phone = Teléfono
+administrator.address = Dirección
+administrator.photo = Foto
+administrator.vatNumber = Número VAT
+administrator.username = Nombre de usuario
+administrator.password = Contraseña
+administrator.passwordChecker = Repita la contraseña
+
+administrator.edit = Editar perfil
+administrator.save = Guardar
+administrator.cancel = Cancelar
+
+userAccount.password = Contraseña
+
+administrator.fieldset.personalInformation 		= Información personal
+administrator.fieldset.userAccount 		= Cuenta de usuario
+administrator.validation.legalTermsAcceptance = Debe leer y aceptar nuestros términos y condiciones
+administrator.validation.passwordsNotMatch = Las contraseñas no coinciden
+administrator.validation.userNameAlreadyExists = Nombre de usuario en uso, intente con otro
+
+administrator.display = Mostrar
+
+administrator.confirmTerms		= Si clicas en la checkbox aceptarás los términos y condiciones.
+administrator.terms				= Términos y condiciones
+
+actor.terms	= Acepto los <a href="terms/display.do" target="_blank">Términos y condiciones</a> 
+
+member.confirmationPhone = El teléfono introducido no sigue el siguente patrón: +CC(AC)PN, +CC PN  ¿Está seguro de que es correcto?
+member.validation.passwordsNotMatch	= Las contraseñas no coinciden
+member.validation.usernameExists		= Este usuario ya existe
+member.validation.checkBox				= Esta checkbox debe estar marcada
+
+administrator.commit.error 		= No se puede realizar la operación
+
+actor.exportData = Exportar datos
