--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
@@ -9,18 +9,23 @@
 master.page.administrator			= Administrator
 master.page.administrator.action.1	= Action 1
 master.page.administrator.action.2	= Action 2
+master.page.administrator.viewProfile = My profile
 
-master.page.customer				= Customer
-master.page.customer.action.1		= Action 1
-master.page.customer.action.2		= Action 2
+master.page.company				= Company
+master.page.company.action.1		= Action 1
+master.page.company.display			= My profile
+
+master.page.hacker				= Hacker
+master.page.hacker.action.1		= Action 1
+master.page.hacker.display			= My profile
 
 master.page.profile 				= Profile
 master.page.profile.action.1 		= Action 1
 master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
 
-master.page.register.hacker 		= Sign in as a new hacker
-master.page.register.company 		= Sign in as a new company
+master.page.register.hacker 		= Sign in as a hacker
+master.page.register.company 		= Sign in as a company
 
 master.page.terms                   = Terms and conditions
 
@@ -28,6 +33,6 @@ master.page.login 					= Login
 master.page.logout 					= Logout
 
 master.page.companies 				= Companies
-master.page.customer.list.companies = Company list
+master.page.customer.list.companies = Companies' list
 master.page.positions 				= Positions
-master.page.customer.list.positions = Position list
+master.page.customer.list.positions = Positions' list
