--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
@@ -14,6 +14,8 @@ position.ticker	= Ticker
 position.status	= Status
 position.company = Company
 
+position.create = Create position
+
 position.cancel							= Cancel
 position.save							= Save
 position.edit							= Edit position
