--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
@@ -22,3 +22,5 @@ position.edit							= Editar posición
 
 position.commit.error 		= No se puede realizar la operación
 position.commit.ok			= Operacion realizada con éxito
+
+position.keyword = Buscar por palabra clave
