--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
@@ -20,6 +20,7 @@ master.page.hacker.action.1		= Action 1
 master.page.hacker.display			= My profile
 
 master.page.profile 				= Profile
+master.page.profile.messages		= Messages
 master.page.profile.action.1 		= Action 1
 master.page.profile.action.2		= Action 2
 master.page.profile.action.3		= Action 3
