--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
@@ -20,6 +20,7 @@ master.page.hacker.action.1		= Acción 1
 master.page.hacker.display			= Mi perfil
 
 master.page.profile 				= Perfil
+master.page.profile.messages			= Mensajes
 master.page.profile.action.1 		= Acción 1
 master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
