--- a/Acme-Hacker-Rank/src/main/webapp/views/message/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/message/messages_es.properties
@@ -1,4 +1,7 @@
 message.subject									= Asunto
 message.body									= Cuerpo
 
+message.broadCastMessage						= Redactar una emisión de notificación para todos los actores
+message.warning									= Enviar un mensaje de alerta
+
 message.commit.error 							= No se puede realizar la operación
