--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
@@ -12,7 +12,9 @@ master.page.administrator.action.2	= Action 2
 master.page.administrator.viewProfile = My profile
 
 master.page.company				= Company
-master.page.company.action.1		= Action 1
+master.page.company.positions		= Positions
+master.page.company.problems		= Problems
+master.page.company.applications	= Applications
 master.page.company.display			= My profile
 
 master.page.hacker				= Hacker
