--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
@@ -11,8 +11,10 @@ master.page.administrator.action.1	= Acción 1
 master.page.administrator.action.2	= Acción 2
 master.page.administrator.viewProfile = Mi perfil
 
-master.page.company				= Compañía
-master.page.company.action.1		= Acción 1
+master.page.company					= Compañía
+master.page.company.positions		= Puestos
+master.page.company.problems		= Problemas
+master.page.company.applications	= Solicitudes
 master.page.company.display			= Mi perfil
 
 master.page.hacker				= Hacker
