Broadcast y brechas de seguridad (falta podar Message)
Hay que podar Message para quitar el sender de los hidden.

--- a/Acme-Hacker-Rank/src/main/webapp/views/message/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/message/messages.properties
@@ -1,7 +1,14 @@
 message.subject									= Subject
 message.body									= Body
 
+message.send									= Send
+message.cancel									= Cancel
+message.legend									= Editing this message:
+message.sender.userAccount						= Sender's user account
+message.recipient.userAccount					= Recipient's user account
+
 message.broadCastMessage						= Write a broadcast notification to all actors
 message.warning									= Send a warning message
 
 message.commit.error 							= Cannot commit this operation
+message.nopermission							= You have no permission to do this operation!
