--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
@@ -18,6 +18,9 @@ position.create = Create position
 
 position.cancel							= Cancel
 position.save							= Save
+position.saveFinal						= Save Final
+position.saveDraft						= Save as Draft
+position.saveCancel						= Cancel position
 position.edit							= Edit position
 
 position.commit.error 		= Cannot commit this operation
