--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
@@ -18,6 +18,9 @@ position.create = Crear posición
 
 position.cancel							= Cancelar
 position.save							= Guardar
+position.saveFinal						= Guardar como final
+position.saveDraft						= Guardar como borrador
+position.saveCancel						= Cancelar posición
 position.edit							= Editar posición
 
 position.commit.error 		= No se puede realizar la operación
