--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
@@ -7,8 +7,7 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.administrator			= Administrator
-master.page.administrator.action.1	= Action 1
-master.page.administrator.action.2	= Action 2
+master.page.administrator.register	= Register a new administrator
 master.page.administrator.viewProfile = My profile
 
 master.page.company				= Company
