--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
@@ -7,8 +7,7 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.administrator			= Administrador
-master.page.administrator.action.1	= Acción 1
-master.page.administrator.action.2	= Acción 2
+master.page.administrator.register	= Registrar un nuevo administrador
 master.page.administrator.viewProfile = Mi perfil
 
 master.page.company					= Compañía
