Dashboard + arreglos traducciones

--- a/Acme-Hacker-Rank/src/main/webapp/views/administrator/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/administrator/messages.properties
@@ -31,6 +31,21 @@ administrator.validation.legalTermsAcceptance = You need to read and accept our 
 administrator.validation.passwordsNotMatch = Passwords do not match
 administrator.validation.userNameAlreadyExists = Username already in use, try a different one
 
+administrator.statistics = Statistics
+administrator.metrics = Metrics
+administrator.average = Average
+administrator.minimum = Minimum
+administrator.maximum = Maximum
+administrator.std = Standart desviation
+administrator.positionsPerCompany = Positions per company
+administrator.applicationsPerHacker = Applications per hacker
+administrator.companiesWithMorePositions = Companies that have offered more positions
+administrator.company.commercialName = Company's commercial name
+administrator.hackersWithMoreApplications = Hackers who have made more applications
+administrator.salariesOffered = Salaries offered
+administrator.bestSalaryPosition = Best position in terms of salary
+administrator.worstSalaryPosition = Worst position in terms of salary
+
 administrator.display = Display
 
 administrator.confirmTerms		= If you check the checkbox you will accept the terms and conditions.
