--- a/Acme-Hacker-Rank/src/main/webapp/views/administrator/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/administrator/messages_es.properties
@@ -31,6 +31,21 @@ administrator.validation.legalTermsAcceptance = Debe leer y aceptar nuestros tér
 administrator.validation.passwordsNotMatch = Las contraseñas no coinciden
 administrator.validation.userNameAlreadyExists = Nombre de usuario en uso, intente con otro
 
+administrator.statistics = Estadísticas
+administrator.metrics = Métricas
+administrator.average = Media
+administrator.minimum = Mínimo
+administrator.maximum = Máximo
+administrator.std = Desviación típica
+administrator.positionsPerCompany = Puestos de trabajo por empresa
+administrator.applicationsPerHacker = Solicitudes por hacker
+administrator.companiesWithMorePositions = Empresas que han ofrecido más puestos de trabajo
+administrator.company.commercialName = Nombre comercial de la empresa
+administrator.hackersWithMoreApplications = Hackers que han realizado más solicitudes
+administrator.salariesOffered = Salarios ofrecidos
+administrator.bestSalaryPosition = Mejor puesto de trabajo en términos de salario
+administrator.worstSalaryPosition = Peor puesto de trabajo en términos de salario
+
 administrator.display = Mostrar
 
 administrator.confirmTerms		= Si clicas en la checkbox aceptarás los términos y condiciones.
