--- a/Acme-Hacker-Rank/src/main/webapp/views/hacker/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/hacker/messages_es.properties
@@ -1,7 +1,7 @@
 hacker.hacker = Hacker
 hacker.display		= Mostrar
 
-hacker.nopermission = ¡No puedes editar esta compañía!
+hacker.nopermission = ¡No puedes editar esta empresa!
 hacker.confirmationPhone = El teléfono introducido no sigue el siguente patrón: +CC(AC)PN, +CC PN  ¿Está seguro de que es correcto?
 hacker.confirmTerms		= Si clicas en la checkbox aceptarás los términos y condiciones.
 hacker.terms				= Términos y condiciones
