--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
@@ -7,7 +7,8 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.administrator			= Administrator
-master.page.administrator.register	= Register a new administrator
+master.page.administrator.register	= Register administrator
+master.page.administrator.dashboard = Dashboard
 master.page.administrator.viewProfile = My profile
 
 master.page.company				= Company
