--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
@@ -7,10 +7,11 @@
 # http://www.tdg-seville.info/License.html
 
 master.page.administrator			= Administrador
-master.page.administrator.register	= Registrar un nuevo administrador
+master.page.administrator.register	= Registrar administrador
+master.page.administrator.dashboard = Panel de control
 master.page.administrator.viewProfile = Mi perfil
 
-master.page.company					= Compañía
+master.page.company					= Empresa
 master.page.company.positions		= Puestos
 master.page.company.problems		= Problemas
 master.page.company.applications	= Solicitudes
@@ -27,14 +28,14 @@ master.page.profile.action.2		= Acción 2
 master.page.profile.action.3		= Acción 3
 
 master.page.register.hacker 		= Registrarse como un hacker
-master.page.register.company 		= Registrarse como una compañía
+master.page.register.company 		= Registrarse como una empresa
 
 master.page.terms                   = Terminos y condiciones
 
 master.page.login 					= Entrar
 master.page.logout 					= Salir
 
-master.page.companies 				= Compañías
-master.page.customer.list.companies = Lista de compañías
-master.page.positions 				= Posiciones
-master.page.customer.list.positions = Lista de posiciones
+master.page.companies 				= Empresas
+master.page.customer.list.companies = Lista de empresas
+master.page.positions 				= Puestos de trabajo
+master.page.customer.list.positions = Lista de puestos de trabajo
