--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
@@ -1,7 +1,7 @@
-position.position = Compañía
+position.position = Empresa
 position.display = Mostrar
 
-position.nopermission = ¡No puedes editar esta posición!
+position.nopermission = ¡No puedes editar este puesto de trabajo!
 
 position.title = Título
 position.description = Descripción
@@ -12,16 +12,16 @@ position.technologiesRequired = Tecnologías requeridas
 position.salaryOffered = Salario ofrecido
 position.ticker	= Código
 position.status	= Estado
-position.company = Compañía
+position.company = Empresa
 
-position.create = Crear posición
+position.create = Crear puesto de trabajo
 
 position.cancel							= Cancelar
 position.save							= Guardar
 position.saveFinal						= Guardar como final
 position.saveDraft						= Guardar como borrador
-position.saveCancel						= Cancelar posición
-position.edit							= Editar posición
+position.saveCancel						= Cancelar puesto de trabajo
+position.edit							= Editar puesto de trabajo
 
 position.commit.error 		= No se puede realizar la operación
 position.commit.ok			= Operacion realizada con éxito
