--- a/Acme-Hacker-Rank/src/main/webapp/views/company/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/company/messages_es.properties
@@ -1,12 +1,12 @@
-company.company = Compañía
+company.company = Empresa
 company.commercialName		= Nombre comercial
-company.positions		= Posiciones
+company.positions		= Puestos de trabajo
 company.positions.title		= Título
 company.positions.description		= Descripción
-company.positions.empty		= No hay posiciones
+company.positions.empty		= No hay puestos de trabajo
 company.display		= Mostrar
 
-company.nopermission = ¡No puedes editar esta compañía!
+company.nopermission = ¡No puedes editar esta empresa!
 company.confirmationPhone = El teléfono introducido no sigue el siguente patrón: +CC(AC)PN, +CC PN  ¿Está seguro de que es correcto?
 company.confirmTerms		= Si clicas en la checkbox aceptarás los términos y condiciones.
 company.terms				= Términos y condiciones
