--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
@@ -19,6 +19,8 @@ master.page.hacker				= Hacker
 master.page.hacker.action.1		= Acción 1
 master.page.hacker.display			= Mi perfil
 
+master.page.application.list	= Lista de aplicaciones
+
 master.page.profile 				= Perfil
 master.page.profile.messages			= Mensajes
 master.page.profile.action.1 		= Acción 1
