--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages.properties
@@ -19,6 +19,8 @@ master.page.hacker				= Hacker
 master.page.hacker.action.1		= Action 1
 master.page.hacker.display			= My profile
 
+master.page.application.list	= Application's list
+
 master.page.profile 				= Profile
 master.page.profile.messages		= Messages
 master.page.profile.action.1 		= Action 1
