Arreglos CU 3 - Company

--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
@@ -13,6 +13,7 @@ position.salaryOffered = Salary offered
 position.ticker	= Ticker
 position.status	= Status
 position.company = Company
+position.problems = Problems
 
 position.create = Create position
 
@@ -22,6 +23,7 @@ position.saveFinal						= Save Final
 position.saveDraft						= Save as Draft
 position.saveCancel						= Cancel position
 position.edit							= Edit position
+position.delete							= Delete position
 
 position.commit.error 		= Cannot commit this operation
 position.commit.ok			= Operation performed successfully
