--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
@@ -1,7 +1,7 @@
-position.position = Compañía
+position.position = Empleo
 position.display = Mostrar
 
-position.nopermission = ¡No puedes editar esta posición!
+position.nopermission = ¡No puedes editar este empleo!
 
 position.title = Título
 position.description = Descripción
@@ -13,6 +13,7 @@ position.salaryOffered = Salario ofrecido
 position.ticker	= Código
 position.status	= Estado
 position.company = Compañía
+position.problems = Problemas
 
 position.create = Crear posición
 
@@ -20,8 +21,9 @@ position.cancel							= Cancelar
 position.save							= Guardar
 position.saveFinal						= Guardar como final
 position.saveDraft						= Guardar como borrador
-position.saveCancel						= Cancelar posición
-position.edit							= Editar posición
+position.saveCancel						= Cancelar empleo
+position.edit							= Editar empleo
+position.delete							= Borrar empleo
 
 position.commit.error 		= No se puede realizar la operación
 position.commit.ok			= Operacion realizada con éxito
