--- a/Acme-Hacker-Rank/src/main/webapp/views/application/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/application/messages.properties
@@ -28,7 +28,10 @@ application.answer.codeLink		= Answer link
 application.answer.moment 		= Answer creation moment
 
 application.position.title		= Position
-<
+
+application.approve 			= Approve
+application.reject				= Reject
+
 application.hacker.name			= Hacker's name
 
 application.save				= Save
