--- a/Acme-Hacker-Rank/src/main/webapp/views/application/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/application/messages_es.properties
@@ -29,6 +29,10 @@ application.answer.moment 		= Momento de creacion de la respuesta
 
 application.position.title		= Posicion
 
+application.approve 			= Aprobar
+application.reject				= Rechazar
+
+
 application.hacker.name			= Nombre del hacker
 
 application.save				= Guardar
