--- a/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/master-page/messages_es.properties
@@ -21,7 +21,7 @@ master.page.hacker				= Hacker
 master.page.hacker.action.1		= Acción 1
 master.page.hacker.display			= Mi perfil
 
-master.page.application.list	= Lista de aplicaciones
+master.page.application.list	= Solicitudes
 
 master.page.profile 				= Perfil
 master.page.profile.messages			= Mensajes
