Arreglos de Positions
Ya tiene un boton de crear en el list y saltan los errores oportunos

--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
@@ -28,4 +28,7 @@ position.delete							= Delete position
 position.commit.error 		= Cannot commit this operation
 position.commit.ok			= Operation performed successfully
 
+position.validation.skillsRequired	= Must not be blank
+position.validation.technologiesRequired		= Must not be blank
+
 position.keyword = Search keyword
