--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
@@ -1,18 +1,18 @@
 position.position = Empleo
 position.display = Mostrar
 
-position.nopermission = ï¿½No puedes editar este empleo!
+position.nopermission = ¡No puedes editar este empleo!
 
-position.title = Tï¿½tulo
-position.description = Descripciï¿½n
-position.deadline = Fecha lï¿½mite
+position.title = Titulo
+position.description = Descripcion
+position.deadline = Fecha limite
 position.profileRequired = Perfil requerido
 position.skillsRequired = Habilidades requeridas
-position.technologiesRequired = Tecnologï¿½as requeridas
+position.technologiesRequired = Tecnologias requeridas
 position.salaryOffered = Salario ofrecido
-position.ticker	= Cï¿½digo
+position.ticker	= Codigo
 position.status	= Estado
-position.company = Compaï¿½ï¿½a
+position.company = Empresa
 position.problems = Problemas
 
 position.create = Crear puesto de trabajo
@@ -25,7 +25,10 @@ position.saveCancel						= Cancelar empleo
 position.edit							= Editar empleo
 position.delete							= Borrar empleo
 
-position.commit.error 		= No se puede realizar la operaciï¿½n
-position.commit.ok			= Operacion realizada con ï¿½xito
+position.commit.error 		= No se puede realizar la operacion
+position.commit.ok			= Operacion realizada con exito
+
+position.validation.skillsRequired	= No puede estar vacio
+position.validation.technologiesRequired		= No puede estar vacio
 
 position.keyword = Buscar por palabra clave
