Arreglos de Application

--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages.properties
@@ -31,4 +31,6 @@ position.commit.ok			= Operation performed successfully
 position.validation.skillsRequired	= Must not be blank
 position.validation.technologiesRequired		= Must not be blank
 
+position.validation.deadline.after	= The date must be future
+
 position.keyword = Search keyword
