--- a/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
+++ b/Acme-Hacker-Rank/src/main/webapp/views/position/messages_es.properties
@@ -30,5 +30,6 @@ position.commit.ok			= Operacion realizada con exito
 
 position.validation.skillsRequired	= No puede estar vacio
 position.validation.technologiesRequired		= No puede estar vacio
+position.validation.deadline.after	= La fecha debe ser futura
 
 position.keyword = Buscar por palabra clave
